# voician

./: Cargo.toml  README.md  crepe_full.onnx
src/: analysis.rs  audio.rs  cc_map.rs  chords.rs  crepe.rs  engine.rs  gui.rs  gui.rs.bak  main.rs  midi.rs  pitch.rs  scale.rs  state.rs  strudel.rs  triggers.rs
