[package]
name = "voician"
version = "1.0.0"
edition = "2021"
description = "Real-time voice-to-MIDI instrument with hybrid pitch detection, scale lock, chord generation, percussion triggers, and CC mapping — inspired by Dubler 2"
license = "MIT"

[dependencies]
# Audio input capture (WASAPI on Windows)
cpal = "0.15"

# MIDI output to virtual ports
midir = "0.10"

# FFT for spectral centroid analysis
rustfft = "6.2"

# ONNX Runtime for CREPE neural pitch detection
ort = "2.0.0-rc.11"

# Lock-free SPSC ring buffer for audio thread communication
ringbuf = "0.4"

# Ergonomic error handling
anyhow = "1.0"

# Cross-platform Ctrl+C handler
ctrlc = "3.4"

# GUI framework (egui + eframe for native window)
eframe = "0.33"
egui = "0.33"
egui_plot = "0.33"

# Thread-safe communication for engine → GUI state
crossbeam-channel = "0.5"

# WebSocket server for strudel integration
tungstenite = "0.26"

# JSON serialization for strudel messages
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Open browser for strudel UI
open = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
